feat: add favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,9 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="{{ '/assets/favicon.ico' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="192x192" href="{{ '/assets/favicon-192x192.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="512x512" href="{{ '/assets/favicon-512x512.png' | relative_url }}">
+  <link rel="apple-touch-icon" href="{{ '/assets/favicon-192x192.png' | relative_url }}">
 </head>
 <body>
   {% include header.html %}
