--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,9 @@
   <link rel="icon" type="image/png" sizes="192x192" href="{{ '/assets/android-chrome-192x192.png' | relative_url }}">
   <link rel="icon" type="image/png" sizes="512x512" href="{{ '/assets/android-chrome-512x512.png' | relative_url }}">
   <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/apple-touch-icon.png' | relative_url }}">
+
+  <!-- RSS Feed -->
+  <link rel="alternate" type="application/atom+xml" title="{{ site.title }} - Articles" href="{{ '/feed.xml' | relative_url }}">
 </head>
 <body>
   {% include header.html %}
