feat: update seo

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% include seo-jsonld.html %}
+
 <article class="article">
   <header class="article-header">
     <h1 class="article-title">{{ page.title }}</h1>
