--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
-  <meta name="description" content="{{ page.description | default: site.description }}">
+  <!-- SEO tags (includes title, description, Open Graph, Twitter Cards, JSON-LD, canonical) -->
+  {% seo %}
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
