feat: cleanup styling and date format

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -8,7 +8,7 @@ layout: default
   <header class="article-header">
     <h1 class="article-title">{{ page.title }}</h1>
     <div class="article-meta">
-      <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>
+      <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%d %B %Y" }}</time>
       {% if page.categories %}
         <span class="article-categories">
           {% for category in page.categories %}
