--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,27 +16,10 @@ layout: default
     {% endif %}
 
     <div class="post-meta">
-      {% if page.title %}
-        <h1 class="post-title">{{ page.title }}</h1>
-      {% endif %}
-
-      {% if page.caption %}
-        <p class="post-caption">{{ page.caption }}</p>
-      {% endif %}
-
-      {{ content }}
-
-      {% if page.tags %}
-        <div class="post-tags">
-          {% for tag in page.tags %}
-            <span class="tag">#{{ tag }}</span>
-          {% endfor %}
-        </div>
-      {% endif %}
 
       {% if page.date %}
         <time class="post-date" datetime="{{ page.date | date_to_xmlschema }}">
-          {{ page.date | date: "%B %d, %Y" }}
+          {{ page.date | date: "%d %B %Y" }}
         </time>
       {% endif %}
     </div>
